[package]
name = "neptune-common"
version = "0.1.0"
authors = [
    "Eric Woolsey<eric@cryptech.dev>",
    "Francisco Inacio<cisco@cryptech.dev>",
    "Cryptech Developments Ltd."
]
edition = "2021"
description = "The common data, interfaces and functionality used across the Neptune Finance smart contracts"
homepage = "https://nept.finance"
keywords = ["cosmwasm", "smart-contracts", "cosmos", "money-market", "neptune"]
license = "Apache-2.0"
repository = "https://github.com/cryptechdev/neptune-common"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
injective = []

[dependencies]
cw20 = "1" 
cw-storage-plus = { git = "https://github.com/cosmwasm/cw-storage-plus.git" }
cosmwasm-std = "1"
cosmwasm-derive = "1"
cosmwasm-schema = "1"
injective-cosmwasm = { git = "https://github.com/cryptechdev/cw-injective.git", branch = "eric/dev" }
injective-math = { git = "https://github.com/cryptechdev/cw-injective.git", branch = "eric/dev" }
schemars = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
astroport = "1"

thiserror = "1"
shrinkwraprs = "0.3"
neptune-auth = "0.1"

[dev-dependencies]
rand = "0.8"
