[package]
name = "neptune-common"
version = "0.1.0"
authors = [
    "Eric Woolsey<eric@cryptech.dev>",
    "Francisco Inacio<cisco@cryptech.dev>",
    "Cryptech Developments Ltd.",
]
edition = "2021"
description = "The common data, interfaces and functionality used across the Neptune Finance smart contracts"
homepage = "https://nept.finance"
keywords = ["cosmwasm", "smart-contracts", "cosmos", "money-market", "neptune"]
license = "Apache-2.0"
repository = "https://github.com/cryptechdev/neptune-common"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
injective = ["dep:injective-cosmwasm", "dep:injective-math"]

[dependencies]
cw20 = "1"
cosmwasm-std = "1"
cosmwasm-derive = "1"
cosmwasm-schema = "1"
schemars = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"
shrinkwraprs = "0.3"
neptune-auth = "0.1"

# See: https://github.com/CosmWasm/cw-storage-plus/pull/34
#      https://github.com/CosmWasm/cw-storage-plus/milestone/2
cw-storage-plus = { git = "https://github.com/cosmwasm/cw-storage-plus.git" }

# See: https://github.com/astroport-fi/astroport-core/issues/376
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v3.3.2" }

# Optional Deps for Injective.
injective-cosmwasm = { git = "https://github.com/cryptechdev/cw-injective.git", branch = "eric/dev", optional = true }
injective-math = { git = "https://github.com/cryptechdev/cw-injective.git", branch = "eric/dev", optional = true }

[dev-dependencies]
rand = "0.8"
