[package]
name = "neptune-common"
version = "1.0.0"
authors = [
    "Eric Woolsey<eric@cryptech.dev>",
    "Francisco Inacio<cisco@cryptech.dev>",
    "Cryptech Developments Ltd.",
]
edition = "2021"
description = "The common data, interfaces and functionality used across the Neptune Finance smart contracts"
homepage = "https://nept.finance"
keywords = ["cosmwasm", "smart-contracts", "cosmos", "money-market", "neptune"]
license = "Apache-2.0"
repository = "https://github.com/cryptechdev/neptune-common"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
injective = ["dep:injective-cosmwasm", "dep:injective-math"]
swap = ["dep:astroport"]

[dependencies]
cw20 = "1"
cosmwasm-std = "1"
cosmwasm-derive = "1"
cosmwasm-schema = "1"
schemars = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-wasm = "1"
thiserror = "1"
shrinkwraprs = "0.3"
neptune-auth = "0.1"

# See: https://github.com/CosmWasm/cw-storage-plus/pull/34
#      https://github.com/CosmWasm/cw-storage-plus/milestone/2
cw-storage-plus = { git = "https://github.com/CosmWasm/cw-storage-plus.git", rev = "22542edf3b3fc5252bb0e51cb60bf8962dff2725" }
# See: https://github.com/astroport-fi/astroport-core/issues/376
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v3.3.2", optional = true }

# Optional Deps for Injective.
injective-cosmwasm = { version = "0.2", optional = true }
injective-math = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.8"
